@@ -1,6 +1,8 @@
 2018-06-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * cassette.c, devices.c, esc.c, sio.c: Added support for SIO patches in
   AltirraOS 800/XL.
+* android/jni/jni.c: Allow running "Atari OS/B" machine types with AltirraOS
+  when no real rev. B ROMs are available.
 
 
 2018-06-01  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
